--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/tutorial.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/tutorial.html
@@ -43,5 +43,5 @@
 </div>
 
 <div style="position:absolute; bottom:10px; right:10px; z-index: 25;  text-align:right; ">
-  <img src="img/tutorial/{{language}}/skip.png" style="width:40%; height:auto;"  onerror="this.src='img/tutorial/pt/skip.png'"   ng-click="goToIndex()">
+  <img class="h-skip" src="img/tutorial/{{language}}/skip.png"  onerror="this.src='img/tutorial/pt/skip.png'"   ng-click="goToIndex()">
 </div>
