--- a/FutbolBrasil/futbol-brasil/app/styles/default.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/default.css
@@ -14,7 +14,7 @@ body,ul,li { padding: 0 !important; margin: 0 !important; border: 0 !important; 
 .footer-section:hover {color: #FFFFFF !important; text-decoration: none  !important; }
 .footer-section:active { color: #FFFFFF !important; text-decoration: none  !important; }
 
-#wrapper, #wrapperM, .wrapper {
+#wrapper, #wrapperM, #wrapperL,.wrapper {
     position: absolute;
     z-index: 1;
     top: 50px;
@@ -565,10 +565,6 @@ body.content-mtm .row-back {
     margin-bottom: 0 !important;
 }
 
-.search-list-wrapper {
-    top: 125px !important;
-}
-
 .search-list-item {
     padding-top: 8px !important;
     padding-bottom: 8px !important;
@@ -577,12 +573,15 @@ body.content-mtm .row-back {
 .search-list-pager {
     position: absolute;
     z-index: 2;
-    top: 84%;
-    width: 90%;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
 }
 
 .search-list-pager li span {
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.23), 0 3px 10px rgba(0, 0, 0, 0.16);
+    margin: 10px !important;
+
 }
 
 /*Settings*/
@@ -1093,7 +1092,8 @@ h6.team-name {
     }
 
     .content-standings .h-list .h-headline,
-    .content-prediction .h-list .h-headline {
+    .content-prediction .h-list .h-headline,
+    .content-team-selection .h-list .h-headline {
       font-size:1.8em;
     }
 
@@ -1163,6 +1163,25 @@ h6.team-name {
       max-width:126px;
       max-height:126px;
     }
+
+    .content-team-selection .form-horizontal,
+    .content-team-selection .form-group {
+      margin: 0 !important;
+    }
+
+    .content-team-selection #wrapperL {
+      top: 80px;
+      bottom: 0;
+    }
+
+    .content-team-selection #wrapper2 {
+      bottom: 0;
+    }
+
+    .content-language-selection #wrapper {
+      top: 150px;
+    }
+
     /*</v2>*/
 
 
