FUTBOL BRASIL: Validaciones varias de facebook y vista de puntos

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/points.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/points.html
@@ -7,7 +7,7 @@
                     <table class="table h-table">
                         <thead>
                             <tr class="h-header green">
-                                <th >
+                                <th style="text-align: left;">
                                     <span translate>LEADERBOARD.TOURNAMENT</span>
                                 </th>
                                 <th>
