--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/settings.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/settings.html
@@ -133,11 +133,11 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-xs-12">
-                            <span class="btn text-center btn-facebook btn-info"
+                            <button class="btn text-center btn-facebook btn-info"
                                     ng-class="fbObject.class"
                                  ng-click="onFbButtonClick()"
                                  ng-bind="fbObject.fbButtonMsg">
-                            </span>
+                            </button>
                         </div>
                     </div>
                 </div>
