FUTBOL BRASIL: Validaciones varias de FACEBOOK

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/login.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/login.html
@@ -18,7 +18,7 @@
                                         <!--span class="input-group-addon">+58</span-->
                                         <label for="msisdnInput" class="col-xs-12 control-label sr-only"
                                                translate>LOGIN.MSISDN_LABEL</label>
-                                        <input type="tel" class="form-control empty" ng-model="msisdn"
+                                        <input type="tel" class="form-control empty" ng-model="msisdn" maxlength="11"
                                                id="msisdnInput" placeholder="{{ 'LOGIN.MSISDN_HOLDER' | translate }}">
                                         <span class="material-input"></span>
                                     </div>
