--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/remind.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/remind.html
@@ -23,7 +23,7 @@
                                         <span class="input-group-addon">&nbsp;&nbsp;</span>
                                         <label for="msisdnInput" class="col-xs-2 control-label sr-only"
                                                translate>LOGIN.MSISDN_LABEL</label>
-                                        <input type="tel" class="form-control empty" ng-model="msisdn"
+                                        <input type="tel" class="form-control empty" maxlength="11" ng-model="msisdn"
                                                id="msisdnInput" placeholder="{{ 'LOGIN.MSISDN_HOLDER' | translate }}">
                                         <span class="material-input"></span>
                                     </div>
