--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
@@ -18,54 +18,68 @@
                       </div>
                     </div>
 
-                    <div class="row">
-                      <div class="col-xs-6" >
-                                <span class="btn btn-success btn-filter-{{$index}} disabled"
-                                      ng-class="{'disabled': isActive('competition{{$index}}')}"
-                                      ng-click="showTournament()" translate>LEADERBOARD.TOURNAMENT</span>
+
+                    <div class="row" >
+                      <div class="col-xs-12 h-header red" style="text-align:right;" >
+
+                        <span class="badge disabled" style="padding: 5px 15px;"
+                              ng-class="{'disabled': isActive('competition{{$index}}')}"
+                              ng-click="showTournament()">{{'LEADERBOARD.TOURNAMENT' | translate}}</span>
+
+                        <span class="badge" style="padding: 5px 15px;"
+                              ng-class="{'disabled': isActive('phase{{$index}}')}"
+                              ng-click="showPhase()" translate>{{'LEADERBOARD.PHASE' | translate}}</span>
+
                       </div>
-                      <div class="col-xs-6" >
-                                <span class="btn btn-success btn-filter-{{$index}}"
-                                      ng-class="{'disabled': isActive('phase{{$index}}')}"
-                                      ng-click="showPhase()" translate>LEADERBOARD.PHASE</span>
+                      <div class="col-xs-12  h-header yellow" >
+
+                        <table class="table h-table">
+                          <thead>
+                            <tr>
+                              <th style="width:20%"  >##</th>
+                              <th  translate>LEADERBOARD.PLAYER</th>
+                              <th  style="width:20%" translate>LEADERBOARD.POINTS</th>
+                            </tr>
+                          </thead>
+                        </table>
+
                       </div>
                     </div>
+
+
+
+
 
 
                     <div class="row" ng-show="hasLeaderboard">
                       <div id="{{vWrapper.getName($index)}}" class="wrapper"
                            style="margin-top:100px !important;">
                         <div class="scroller" style="position: relative;">
+
                           <div class="row">
                             <div class="col-xs-12" >
                               <table class="table h-table">
-                                <thead>
-                                <tr>
-                                  <th class="h-header yellow">##</th>
-                                  <th class="h-header yellow" translate>LEADERBOARD.PLAYER</th>
-                                  <th class="h-header yellow" translate>LEADERBOARD.POINTS</th>
-                                </tr>
-                                </thead>
                                 <tbody >
-                                <tr ng-repeat="leader in competition.leaderboard"
-                                    ng-class="{'active' : $odd,  'client' : competition.client.id_client == leader.id_client }" on-last-repeat>
-                                  <td>
-                                                            <span class="text-center-vertical"
-                                                                  ng-bind="leader.index" ></span>
-                                  </td>
-                                  <td>
-                                                            <span class="text-center-vertical"
-                                                                  ng-bind="leader.client"></span>
-                                  </td>
-                                  <td>
-                                                            <span class="text-center-vertical"
-                                                                  ng-bind="leader.score"></span>
-                                  </td>
-                                </tr>
+                                  <tr ng-repeat="leader in competition.leaderboard"
+                                      ng-class="{'active' : $odd,  'client' : competition.client.id_client == leader.id_client }" on-last-repeat>
+                                    <td  style="width:20%" >
+                                      <span class="text-center-vertical"
+                                            ng-bind="leader.index" ></span>
+                                    </td>
+                                    <td  >
+                                      <span class="text-center-vertical"
+                                            ng-bind="leader.client"></span>
+                                    </td>
+                                    <td   style="width:20%">
+                                      <span class="text-center-vertical"
+                                            ng-bind="leader.score"></span>
+                                    </td>
+                                  </tr>
                                 </tbody>
                               </table>
                             </div>
                           </div>
+
                         </div>
                       </div>
                     </div>
