--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/templates/menu-sub-item.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/templates/menu-sub-item.html
@@ -1,4 +1,4 @@
-<div ui-sref="{{section}}" class="row content-sub-menu">
+<div ui-sref="{{section}}" ui-sref-opts="{reload: true}" class="row content-sub-menu">
   <div class="col-xs-12">
     <div class="col-xs-2"></div>
     <div class="col-xs-8 h-title" ng-transclude>
