--- a/FutbolBrasil/futbol-brasil/app/styles/default.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/default.css
@@ -966,7 +966,7 @@ h6.team-name {
     }
 
     .btn-facebook.btn-info {
-      background  : rgb(227,114,34) !important;
+      background  : rgb(59,89,152) !important;
     }
 
     .btn-facebook.btn-warning {
@@ -974,7 +974,7 @@ h6.team-name {
     }
 
     .btn-facebook.btn-success {
-       background  : rgb(59,89,152) !important;
+       background  : rgb(227,114,34) !important;
     }
 
     .h-ellipsis {
@@ -1211,6 +1211,18 @@ h6.team-name {
 
     .content-language-selection #wrapper {
       top: 150px;
+    }
+
+    .badge {
+      background: rgb(44,156,211);
+       color: #ffffff;
+    }
+
+    .badge.disabled {
+       background: rgb(44,156,211);
+       color: #ffffff;
+        opacity: 0.7;
+        filter: alpha(opacity=70);
     }
 
     /*</v2>*/
