--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
@@ -4,9 +4,9 @@
             <ul>
                 <li ng-style="getWidth()" ng-repeat="competition in item.competitions">
 
-                  <div class="container">
+                  <div class="container" style="padding: 0 !important;">
 
-                    <div class="row h-header green">
+                    <div class="row h-header green"  style="margin: 0 !important;">
                       <div class="col-xs-2" ng-click="prevPage($index)">
                         <span class="mdi-navigation-arrow-back" ng-hide="item.competitions[$index-1].name === undefined"></span>
                       </div>
@@ -19,7 +19,7 @@
                     </div>
 
 
-                    <div class="row" >
+                    <div class="row " style="margin: 0 !important;">
                       <div class="col-xs-12 h-header red" style="text-align:right;" >
 
                         <span class="badge disabled" style="padding: 5px 15px;"
@@ -31,25 +31,26 @@
                               ng-click="showPhase()" translate>{{'LEADERBOARD.PHASE' | translate}}</span>
 
                       </div>
+
+                    </div>
+
+
+
+                    <div class="row" >
                       <div class="col-xs-12  h-header yellow" >
 
                         <table class="table h-table">
                           <thead>
-                            <tr>
-                              <th style="width:20%"  >##</th>
-                              <th  translate>LEADERBOARD.PLAYER</th>
-                              <th  style="width:20%" translate>LEADERBOARD.POINTS</th>
-                            </tr>
+                          <tr>
+                            <th style="width:20%"  >##</th>
+                            <th  translate>LEADERBOARD.PLAYER</th>
+                            <th  style="width:20%" translate>LEADERBOARD.POINTS</th>
+                          </tr>
                           </thead>
                         </table>
 
                       </div>
                     </div>
-
-
-
-
-
 
                     <div class="row" ng-show="hasLeaderboard">
                       <div id="{{vWrapper.getName($index)}}" class="wrapper"
