FUTBOL BRASIL: Mejoras en la vista de eventos en mtm

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
@@ -22,11 +22,11 @@
                     <div class="row " style="margin: 0 !important;">
                       <div class="col-xs-12 h-header red" style="text-align:right;" >
 
-                        <span class="badge disabled" style="padding: 5px 15px;"
+                        <span class="badge disabled"
                               ng-class="{'disabled': isActive('competition{{$index}}')}"
                               ng-click="showTournament()">{{'LEADERBOARD.TOURNAMENT' | translate}}</span>
 
-                        <span class="badge" style="padding: 5px 15px;"
+                        <span class="badge"
                               ng-class="{'disabled': isActive('phase{{$index}}')}"
                               ng-click="showPhase()" translate>{{'LEADERBOARD.PHASE' | translate}}</span>
 
