FUTBOL BRASIL: FontSize en notificaciones

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/settings.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/settings.html
@@ -101,7 +101,7 @@
                 </div>
             </div>
 
-            <div class="panel panel-success">
+            <!--div class="panel panel-success">
                 <div class="panel-heading">
                     <h3 class="panel-title">
                         <span class="mdi-action-language"></span>
@@ -122,7 +122,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div-->
 
             <div class="panel panel-info">
                 <div class="panel-heading">
