--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/points.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/points.html
@@ -1,11 +1,42 @@
+<div class="row">
+  <div class="col-xs-12 h-header red" style="text-align:center;">
+    <i class="mdi-action-account-circle"
+       style="font-size:2em; height:35px; line-height:35px; vertical-align:middle;"></i>
+    <span ng-bind="getNameClient" ></span> /
+    <span ng-bind="getTotalPointsClient" ></span> <span translate>LEADERBOARD.POINTS</span>
+
+  </div>
+
+</div>
+
+
 
 <div class="row" ng-show="hasScore">
+  <div class="col-xs-12 h-header green" style="padding: 0 !important;" >
+    <table class="table h-table">
+      <thead>
+      <tr>
+        <th style="width:60%;">
+          <span translate>LEADERBOARD.TOURNAMENT</span>
+        </th>
+        <th style="width:20%;">
+          <span translate>LEADERBOARD.HITS</span>
+        </th>
+        <th style="width:20%;">
+          <span translate>LEADERBOARD.POINTS</span>
+        </th>
+      </tr>
+      </thead>
+    </table>
+
+  </div>
+
     <div id="tournamentScroll" class="wrapper" ng-style="getHeight()">
         <div class="scroller" ng-style="getWidth()">
             <div class="row">
                 <div class="col-xs-12">
                     <table class="table h-table">
-                        <thead>
+                        <!--thead>
                             <tr class="h-header green">
                                 <th>
                                     <span translate>LEADERBOARD.TOURNAMENT</span>
@@ -17,7 +48,7 @@
                                     <span translate>LEADERBOARD.POINTS</span>
                                 </th>
                             </tr>
-                        </thead>
+                        </thead-->
 
                         <tbody >
 
@@ -27,11 +58,11 @@
                                 <span ng-bind="tournament.name" style="font-weight:bold;"></span>
                               </td>
 
-                              <td style="text-center-vertical">
+                              <td style="text-center-vertical; width:20%;">
                                 <span ng-bind="tournament.hits"></span>
                               </td>
 
-                              <td style="text-center-vertical">
+                              <td style="text-center-vertical; width:20%;">
                                 <span ng-bind="tournament.score"></span>
                               </td>
 
