--- a/FutbolBrasil/futbol-brasil/app/styles/default.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/default.css
@@ -881,7 +881,7 @@ h6.team-name {
     }
 
     .content-points .wrapper {
-      top: 225px;
+      top: 35px;
     }
 
     .content-match .wrapper {
@@ -1231,7 +1231,7 @@ h6.team-name {
     .modal-dialog {font-family: TeutonNormal !important;}
     .modal-dialog .mdi-alert-warning {font-size: 1.6em !important;}
     .modal-dialog .modal-title {font-size: 2.2em !important;}
-    .modal-dialog .text-warning {font-size: 1.8em!important;}
+    .modal-dialog .text-warning {font-size: 1.8em!important; vertical-align:middle;}
     .modal-dialog .text-muted {font-size: 1.4em!important;}
     .footer .row.notistats,
     .footer .row.bets {
@@ -1247,7 +1247,8 @@ h6.team-name {
     color: rgb(0,40,120);
     width:100px;
     height: 100px;
-    font-weight: bold;
+    position: relative;
+    line-height: 20px;
   }
 
   h1,h2,h3,h4,h5,h6 {
