FUTBOL BRASIL: Fixed de tablas

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/points.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/points.html
@@ -23,17 +23,17 @@
             </div>
 
             <div class="row" style="margin-top:10px;">
-                <div class="col-xs-12">
+                <div class="col-xs-12" >
                     <table class="table h-table">
                         <thead>
-                            <tr class="h-header green">
-                                <th>
+                            <tr >
+                                <th class="h-header green" style="text-align:left;">
                                     <span translate>LEADERBOARD.TOURNAMENT</span>
-                                </th>
-                                <th>
+                                </th >
+                                <th class="h-header green">
                                     <span translate>LEADERBOARD.HITS</span>
                                 </th>
-                                <th >
+                                <th class="h-header green">
                                     <span translate>LEADERBOARD.POINTS</span>
                                 </th>
                             </tr>
