--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
@@ -36,30 +36,21 @@
 
 
 
-                    <div class="row" >
-                      <div class="col-xs-12  h-header yellow" >
-
-                        <table class="table h-table">
-                          <thead>
-                          <tr>
-                            <th style="width:20%"  >##</th>
-                            <th  translate>LEADERBOARD.PLAYER</th>
-                            <th  style="width:20%" translate>LEADERBOARD.POINTS</th>
-                          </tr>
-                          </thead>
-                        </table>
-
-                      </div>
-                    </div>
-
                     <div class="row" ng-show="hasLeaderboard">
                       <div id="{{vWrapper.getName($index)}}" class="wrapper"
-                           style="margin-top:100px !important;">
+                           style="margin-top:65px !important;">
                         <div class="scroller" style="position: relative;">
 
                           <div class="row">
                             <div class="col-xs-12" >
                               <table class="table h-table">
+                                <thead>
+                                  <tr>
+                                    <th class="h-header yellow" style="width:20%"  >##</th>
+                                    <th class="h-header yellow" style="width:60%" translate>LEADERBOARD.PLAYER</th>
+                                    <th class="h-header yellow" style="width:20%" translate>LEADERBOARD.POINTS</th>
+                                  </tr>
+                                </thead>
                                 <tbody >
                                   <tr ng-repeat="leader in competition.leaderboard"
                                       ng-class="{'active' : $odd,  'client' : competition.client.id_client == leader.id_client }" on-last-repeat>
@@ -67,7 +58,7 @@
                                       <span class="text-center-vertical"
                                             ng-bind="leader.index" ></span>
                                     </td>
-                                    <td  >
+                                    <td  style="width:60%" >
                                       <span class="text-center-vertical"
                                             ng-bind="leader.client"></span>
                                     </td>
