FUTBOL BRASIL: Bold del titulo de la noticia

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
@@ -14,7 +14,7 @@
               </div>
 
               <div class="col-xs-8" style="border:0; padding:0;">
-                <span class="h-headline h-ellipsis">{{item.title}}</span>
+                <span class="h-headline h-ellipsis" style="font-weight:normal !important;">{{item.title}}</span>
                 <br />
                 <i class="mdi-device-access-time"></i>
                 <span class="h-moment">{{fromNow(item.publicationDate)}}</span>
